--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		<ul class="musicList">
 			<li class="music cf" ng-repeat="item in music"> 
 				<div class="info">
-				    <h2>{{ item.author }}</h2>
-					<p>{{ item.title + ", " }}</p>
+				    <h2>Author: {{ item.author }}</h2>
+					<span>Title: <a ng-href="{{item.links}}">{{item.title}}</a></span>
 				</div>
 			</li>
 		
